--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <main class="col-12 col-md-9 col-lg-6 weather-card">
+      <main class="col-12 col-md-9 col-lg-7 col-xl-6 weather-card">
         <form class="input-fields">
           <input type="search" id="city" name="city" placeholder="city" />
           <input type="submit" id="check-btn" name="check" value="check" />
