--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,15 @@
     <div class="container">
       <main class="col-12 col-md-9 col-lg-7 col-xl-6 weather-card">
         <form class="input-fields">
-          <input type="search" id="city" name="city" placeholder="city" />
-          <input type="submit" id="check-btn" name="check" value="check" />
+          <input type="text" id="city" name="city" placeholder="city" />
+          <input type="button" id="check-btn" name="check" value="check" />
         </form>
         <div class="after-receive">
           <div class="wait-loader"></div>
+          <div id="place">&#129323;</div>
           <div class="weather-data">
-            <div class="temprature">Temprature : 24&deg; C</div>
-            <div class="humidity">Humidity : 70%</div>
+            <div id="temprature">Temprature : &#129323;</div>
+            <div id="humidity">Humidity : &#129323;</div>
           </div>
         </div>
       </main>
